--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <div id="collapsable-nav" class="collapse navbar-collapse"> 
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
-              <a href="#chicken-box">
+              <a href="#chicken-box" class="text-center">
                Chicken</a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="text-center">
                Beef</a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="text-center">
                 Sushi</a>
             </li>
 
